# kb-layout-daemon

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  kb-layout-daemon.service
src/: main.rs
widget/: metadata.json
widget/contents/ui/: main.qml
